while/tests/valid/IntDiv_Valid_1.while
int f(int x, int y) {
    return x / y;
}

void main() {
     int x = f(10,2);
     print x;
}
