while/tests/invalid-parsing/Parsing_Invalid_6.while
int f(int y) {
    int x = y;
    int x = x;
    return x;
}